--- a/_posts/2016-08-29-evidence.md
+++ b/_posts/2016-08-29-evidence.md
@@ -2,11 +2,16 @@
 layout: post_mw
 layoutTag: post
 title: "Evidence"
+subtitle:
+chapter: "Chapter 22"
+book: The Techniques of the Mystery
 author: Carolyn Wells
+pubdate: 1913
 date: 2016-08-29-16
 category: murderwiki
-excerpt: Chapter 22 of <i>The Techniques of the Mystery</i>, published 1913.
-image:
+excerpt: Nobody wants to read of a dead leaf fallen from a tree, merely to prove that it is autumn. And so it is the author's work to provide clues that lead to something, and that pique the reader into endeavoring to find out for himself what it is.
+image: /assets/img/cockrobin.jpg
+caption: "The Fly and the Spider,<br>from 'Who Killed Cock Robin?'"
 genre: The Techniques of the Mystery
 wordcount: 6587
 ---
@@ -39,7 +44,9 @@ For instance this description is quoted from &quot;The Scales of Justice,&quot; 
 
 >Coroner Lutgers was the sort of doctor who gets a political job or goes to advertising within three years of his graduation. In one capacity or another, he had been drawing public money for twenty years; and meant to continue in the same occupation for twenty years more.
 
->His strong point was dignity, a dignity much resembling a safety night lamp; for no matter how often it was tipped over, it always righted itself, to gleam austerely from the doctor&#39;s bald forehead and patriarchal whiskers. At this particular inquest, the doctor&#39;s dignity lacked something of its usual calm. It was not a case in which the public would willingly accept the &quot;person or persons unknown&quot; verdict; and yet for the life of him, the coroner could not see how any other verdict was possible.
+>His strong point was dignity, a dignity much resembling a safety night lamp; for no matter how often it was tipped over, it always righted itself, to gleam austerely from the doctor&#39;s bald forehead and patriarchal whiskers.
+
+>At this particular inquest, the doctor&#39;s dignity lacked something of its usual calm. It was not a case in which the public would willingly accept the &quot;person or persons unknown&quot; verdict; and yet for the life of him, the coroner could not see how any other verdict was possible.
 
 However, we still cling to the coroner as a necessary and desirable member of our detective fiction family, and we feel that we could better spare a better man.
 
@@ -97,7 +104,7 @@ The author should know exhaustively the truth about evidence, its real value and
 
 Learn too, the difference between vital and incidental evidence. Sherlock Holmes remarks:
 
->It is of the highest importance in the art of detection to be able to recognize, out of a number of facts, which are incidental and which vital. Otherwise your energy and attention must be dissipated instead of being concentrated. Now, in this case there was not the slightest doubt in my mind from the first that the key of the whole matter must he looked for in the scrap of paper in the dead man&#39;s hand.
+>It is of the highest importance in the art of detection to be able to recognize, out of a number of facts, which are incidental and which vital. Otherwise your energy and attention must be dissipated instead of being concentrated. Now, in this case there was not the slightest doubt in my mind from the first that the key of the whole matter must be looked for in the scrap of paper in the dead man&#39;s hand.
 
 Of course; since the scrap of paper was put there by the author for that very purpose. But a close study of Conan Doyle&#39;s stories will prove the best lesson in collating and understanding evidence.
 
@@ -133,7 +140,7 @@ Indeed, most detective stories are simply the case of the dog with the jam on hi
 
 The evidence, whether at the inquest or at a trial, must be carefully chosen, not only for its own attractive or surprising character but with a view to its material for deduction and analysis. A burnt match on the stairs of an elevated railroad station offers the casual observer little clue; but a burnt match of a particular style, on those same stairs, proving the hour when the criminal lit his &quot;big black cigar,&quot; is of immense importance in leading to a conclusion, foregone in the author&#39;s mind but not in the reader&#39;s.
 
-Remember, it is re-solution that counts. The interest depends on the fact of that match being a beacon light and proving its illuminative power as the tale goes on. No burnt match has a right to be in a detective story unless it is a lamp to the feet of the detective; and a light to a path, either right or wrong, but intentionally so.
+Remember, it is resolution that counts. The interest depends on the fact of that match being a beacon light and proving its illuminative power as the tale goes on. No burnt match has a right to be in a detective story unless it is a lamp to the feet of the detective; and a light to a path, either right or wrong, but intentionally so.
 
 Though circumstantial evidence may depend on personal testimony, it is oftener deduction from inanimate clues, preferably small ones, but always unexpected or incongruous ones.
 
@@ -143,9 +150,9 @@ In one of the &quot;Astro&quot; stories, the reader&#39;s interest is at once ar
 
 ## Deductions from Clues
 
-But even more advantageous than this is the use of the infinitesimal clue. When not irrationally lugged in, shreds, ravel- ings, scrapings of dust from boot heels, or scraps of paper are all much prized as fictional evidence.
+But even more advantageous than this is the use of the infinitesimal clue. When not irrationally lugged in, shreds, ravelings, scrapings of dust from boot heels, or scraps of paper are all much prized as fictional evidence.
 
-In one of the best recent Detective Stories a red shoe button figures as the clue to a murderer. In one of Ottolengui&#39;s stories a waistcoat button is the clue. Of course buttons are a favorite clue as they can conveniently drop off and stay behind on the scene of the crime; or can even be pulled off the criminal&#39;s clothing by the frantic clutch of the victim.
+In one of the best recent Detective Stories, a red shoe button figures as the clue to a murderer. In one of Ottolengui&#39;s stories a waistcoat button is the clue. Of course buttons are a favorite clue as they can conveniently drop off and stay behind on the scene of the crime; or can even be pulled off the criminal&#39;s clothing by the frantic clutch of the victim.
 
 A story by Melville D. Post, entitled &quot;The Missing Link,&quot; hinges upon the loss of a cuff link. But this particular clue is rather hackneyed, and it even cropped up again in &quot;The Trevor Case,&quot; a very popular recent novel; and also plays its part in &quot;The Circular Staircase.&quot;
 
@@ -153,7 +160,9 @@ The great Sergeant Cuff, in &quot;The Moonstone,&quot; first describes the value
 
 In &quot;The Silent Bullet&quot; the clue is so minute as to require a very powerful microscope to discern it. The paragraph quoted below describes the impression of the threads of woven material on a leaden bullet; which, though scientifically possible, is certainly a novel and ingenious bit of evidence for a Detective Story.
 
->&quot;Every leaden bullet, as I have said, which has struck such fabric bears an impression of the threads which is recognizable even when the bullet has penetrated deeply into the body. It is only obliterated partially or entirely when the bullet has been flattened by striking a bone or other hard object. Even then, as in this case, if only a part of the bullet is flattened the remainder may still show the marks of the fabric. A heavy warp, say of cotton velvet or, as I have here, homespun, will be imprinted well on the bullet, but even a fine batiste, containing one hundred threads to the inch, will show marks. Even layers of goods such as a coat, shirt, and undershirt may each leave their marks, but that does not concern us in this case. Now I have here a piece of pongee silk, cut from a woman&#39;s automobile-coat. I discharge the bullet through it—so. I compare the bullet now with the others and with the one probed from the neck of Mr. Parker. I find that the marks on the fatal bullet correspond precisely with those on the bullet fired through the pongee coat.&quot;
+>&quot;Every leaden bullet, as I have said, which has struck such fabric bears an impression of the threads which is recognizable even when the bullet has penetrated deeply into the body. It is only obliterated partially or entirely when the bullet has been flattened by striking a bone or other hard object. Even then, as in this case, if only a part of the bullet is flattened the remainder may still show the marks of the fabric.
+>A heavy warp, say of cotton velvet or, as I have here, homespun, will be imprinted well on the bullet, but even a fine batiste, containing one hundred threads to the inch, will show marks. Even layers of goods such as a coat, shirt, and undershirt may each leave their marks, but that does not concern us in this case. Now I have here a piece of pongee silk, cut from a woman&#39;s automobile-coat. I discharge the bullet through it—so.
+>I compare the bullet now with the others and with the one probed from the neck of Mr. Parker. I find that the marks on the fatal bullet correspond precisely with those on the bullet fired through the pongee coat.&quot;
 
 Nearly all of the Sherlock Holmes stories depend on the deductions from tiny clues, so finely drawn as to be sometimes a strain on the reader&#39;s credulity; but the credulity of the experienced reader of detective fiction becomes exceedingly agile; and he can believe any number of impossible things from before breakfast until long after midnight.
 
@@ -161,7 +170,9 @@ Of course this use of tiny clues is the direct result of the principle of micros
 
 In &quot;That Affair Next Door,&quot; the astute Miss Butterworth finds for a clue a small black pin: &quot;A small matter,&quot; she declares to the reader, &quot;but it points in the right direction.&quot;
 
-In a story of Ashton-Kirk, the clue is the tiny, but symmetrically-shaped bit of pasteboard punched from a railroad ticket. Indeed, all Detective Stories fairly bristle with these tiny clues. But there are plenty yet unused. The alert Detective Story writer can find many that will serve his purpose. A single shred of excelsior found on the floor of a room, where no carefully packed bit of china or bric-a-brac has been unwrapped, will prove the presence of the only man under suspicion who received such a box by recent parcel delivery. Or a tiny, shiny spangle may lead as unerringly to a certain evening gown of a certain grande dame, as a grain of rice in a hat brim proves a bride, or straws in the hair, a farmer.
+In a story of Ashton-Kirk, the clue is the tiny, but symmetrically-shaped bit of pasteboard punched from a railroad ticket. Indeed, all Detective Stories fairly bristle with these tiny clues. But there are plenty yet unused. The alert Detective Story writer can find many that will serve his purpose.
+
+A single shred of excelsior found on the floor of a room, where no carefully packed bit of china or bric-a-brac has been unwrapped, will prove the presence of the only man under suspicion who received such a box by recent parcel delivery. Or a tiny, shiny spangle may lead as unerringly to a certain evening gown of a certain grande dame, as a grain of rice in a hat brim proves a bride, or straws in the hair, a farmer.
 
 But these things must have some sort of a subtly indicative interest. Nobody wants to read of a dead leaf fallen from a tree, merely to prove that it is autumn. And so it is the author&#39;s work to provide clues that lead to something, and that pique the reader into endeavoring to find out for himself what it is.
 
@@ -185,13 +196,19 @@ Now, it is sufficient to pay attention to the conversations in which we take par
 
 Nothing, indeed, is more difficult than to tell the truth; that is to say, to recount the past, to make a deposition upon some fact, even if the fact be one which has come a great number of times under our own eyes.
 
-To prove that this is so, let the reader make the following simple experiment. Without any preliminary, ask a number of persons kindly to draw from memory the figure which indicates six o&#39;clock, exactly as it appears on the dials of their watches. You will find that some of these persons will simply write the figure VI or 6; others, sharper, remembering that the figures take their line of direction from the centre of the dial, will write the symbol upside down, IX or 9. Everybody, however, will be quite convinced that his particular testimony is correct, and ready to swear to it on oath. Now ask them to take out their watches and look at them. Most of them will discover to their stupefaction that the figure VI or IX which they saw so clearly at the foot of the imaginary watch floating before their mind&#39;s eye has no existence at all on the dial of the real watch, where its place is taken by the small seconds-hand dial!
+To prove that this is so, let the reader make the following simple experiment. Without any preliminary, ask a number of persons kindly to draw from memory the figure which indicates six o&#39;clock, exactly as it appears on the dials of their watches.
+
+You will find that some of these persons will simply write the figure VI or 6; others, sharper, remembering that the figures take their line of direction from the centre of the dial, will write the symbol upside down, IX or 9.
+
+Everybody, however, will be quite convinced that his particular testimony is correct, and ready to swear to it on oath. Now ask them to take out their watches and look at them. Most of them will discover to their stupefaction that the figure VI or IX which they saw so clearly at the foot of the imaginary watch floating before their mind&#39;s eye has no existence at all on the dial of the real watch, where its place is taken by the small seconds-hand dial!
 
 Here, then, we have a great number of inaccurate depositions; and yet, how often in the course of a day do most people look at their watches! There is no doubt, moreover, that all these people whom you have thus proved to be wrong acted in perfect good faith; not one of them had any wilful intention of deceiving.
 
 Again, it is not uncommon to find a man who has owned his watch for many years, utterly unable to state whether the hours on the dial are indicated by Roman numerals or Arabic figures. This means only lack of observation, but quite as common is mistaken observation.
 
-An amusing practical test of this is thus related of Professor Dueck. In order to test the memory and susceptibility to suggestion of his pupils he performed the following experiment on forty-eight boys between the ages of fourteen and seventeen. He passed a silver coin about the size of a fifty-cent piece around the class, instructing each boy to examine it carefully, but giving no further indications as to the purpose of his action. At the end of the lesson, which in other respects proceeded as usual. Professor Dueck, having again taken possession of the coin, addressed the class as follows:
+An amusing practical test of this is thus related of Professor Dueck. In order to test the memory and susceptibility to suggestion of his pupils he performed the following experiment on forty-eight boys between the ages of fourteen and seventeen.
+
+He passed a silver coin about the size of a fifty-cent piece around the class, instructing each boy to examine it carefully, but giving no further indications as to the purpose of his action. At the end of the lesson, which in other respects proceeded as usual. Professor Dueck, having again taken possession of the coin, addressed the class as follows:
 
 >&quot;You have no doubt observed that the coin which I handed around had a hole in it; now I should like to test your powers of observation. I am, therefore, going to ask each of you to indicate the point on the coin where the hole is found. Just take a piece of paper, draw a circle upon it, and indicate roughly the position of the head on the coin and of the hole which you observed.&quot;
 
@@ -199,7 +216,7 @@ As a matter of fact there was no hole in the coin at all. Nevertheless no fewer 
 
 This alone is interesting enough, but there were several other features in the case which are well worth recording. In the first place the one and only individual who had not been open to suggestion was a boy who had previously shown his independence by giving considerable difficulty in matters of discipline. Furthermore, several of the younger boys, even after they were told that there was no hole in the coin, absolutely refused to admit this.
 
-The Scientific American, commenting upon this experiment, remarks:
+The *Scientific American*, commenting upon this experiment, remarks:
 
 >&quot;It hardly needs to be pointed out how significant an observation of this character is in its bearing on legal testimony. We must not be surprised that the witness may under certain circumstances not merely make a certain statement incompatible with facts, but may even insist in his erroneous belief in the face of overwhelming evidence against it—and all this in perfectly good faith.&quot;
 
@@ -207,7 +224,11 @@ Once an observer of a magnificent military parade noted the exact and well-train
 
 Further than this, if desired, false testimony may be induced by suggestion of the questioner. Indeed in the giving of evidence suggestion plays a most important part. The simple fact of questioning a witness, of pressing him to answer, enormously increases the risk of errors in his evidence. The form of the question also influences the value of the reply that is made to it. This has given rise to the well-known prohibition of &quot;leading questions&quot; in courts of law.
 
-Let us suppose, for instance; that some persons are questioned about the colour of a certain dog. The replies are likely to be much more correct if we ask the witnesses, &quot;What is the colour of the dog?&quot; than if we were to say to them, &quot;Was the dog white, or was it brown?&quot; The question will be positively suggestive if we ask, &quot;Was the dog white?&quot; To such a question the answer is probably of no value. In questioning witnesses—that is to say, in pressing them and forcing their memory—we may obtain, it is true, a much more extensive deposition than if we leave them free to answer spontaneously. Any advantage thus obtained, however, is problematical, since we lose in fidelity whatever we may gain in extent of information. A trained observation takes things in at a glance, and correctly, too.
+Let us suppose, for instance; that some persons are questioned about the colour of a certain dog. The replies are likely to be much more correct if we ask the witnesses, &quot;What is the colour of the dog?&quot; than if we were to say to them, &quot;Was the dog white, or was it brown?&quot;
+
+The question will be positively suggestive if we ask, &quot;Was the dog white?&quot; To such a question the answer is probably of no value.
+
+In questioning witnesses—that is to say, in pressing them and forcing their memory—we may obtain, it is true, a much more extensive deposition than if we leave them free to answer spontaneously. Any advantage thus obtained, however, is problematical, since we lose in fidelity whatever we may gain in extent of information. A trained observation takes things in at a glance, and correctly, too.
 
 M. Robert Houdin gives this interesting description of training his own eye, as quoted in &quot;The Lock and Key Library:&quot;
 
@@ -221,7 +242,11 @@ Zangwill in &quot;Big Bow Mystery&quot; thus argues the worthlessness of most ca
 
 >&quot;Fifty?&quot; said the Minister, humoring him a little.
 
->&quot;Not five. I say nothing of lapses of memory, or inborn defects of observational power—though in the suspiciously precise recollection of dates and events possessed by ordinary witnesses in important trials taking place years after the occurrences involved, is one of the most amazing things in the curiosities of modern jurisprudence. I defy you, sir, to tell me what you had for dinner last Monday or w hat exactly you were saying and doing at five o&#39;clock last Tuesday afternoon. Nobody whose life does not run in mechanical grooves can do anything of the sort; unless, of course, the facts have been very impressive. But this by the way. The great obstacle to veracious observation is the element of prepossession in all vision. Has it ever struck you, sir, that we never see anyone more than once if that? The first time we meet a man we may possibly see him as he is; the second time our vision is colored and modified by the memory of the first. Do our friends appear to us as they appear to strangers? Do our rooms, our furniture, our pipes strike our eye as they would strike the eye of an outsider, looking on them for the first time?
+>&quot;Not five. I say nothing of lapses of memory, or inborn defects of observational power—though in the suspiciously precise recollection of dates and events possessed by ordinary witnesses in important trials taking place years after the occurrences involved, is one of the most amazing things in the curiosities of modern jurisprudence.
+
+>I defy you, sir, to tell me what you had for dinner last Monday or w hat exactly you were saying and doing at five o&#39;clock last Tuesday afternoon. Nobody whose life does not run in mechanical grooves can do anything of the sort; unless, of course, the facts have been very impressive. But this by the way. The great obstacle to veracious observation is the element of prepossession in all vision.
+
+>Has it ever struck you, sir, that we never see anyone more than once if that? The first time we meet a man we may possibly see him as he is; the second time our vision is colored and modified by the memory of the first. Do our friends appear to us as they appear to strangers? Do our rooms, our furniture, our pipes strike our eye as they would strike the eye of an outsider, looking on them for the first time?
 
 >&quot;Can a mother see her baby&#39;s ugliness, or a lover his mistress&#39; shortcomings though they stare everybody else in the face? Can we see ourselves as others see us? No; habit, prepossession changes all. The mind is a large factor of every so-called external fact. The eye sees, sometimes, what it wishes to see, more often what it expects to see. You follow me, sir?&quot;
 
@@ -231,11 +256,15 @@ Zangwill in &quot;Big Bow Mystery&quot; thus argues the worthlessness of most ca
 
 In this connection we are not discussing the value of evidence, per se, but merely for what it is worth in the construction of a Detective Story. The bringing forth of false evidence to complicate the mysteries of the story, is entirely permissible, if fairly done. And to do this fairly and properly it is wise to make a study of evidence and its relative value.
 
-As we have seen, the average citizen is not observant. He rarely could tell the details of an incident he has witnessed, unless he were already familiar with the conditions. There fore the author of a worth-while Detective Story must make it his business to familiarize himself perfectly and accurately with the conditions he is describing. A lack of this familiarity with details is often seen in our best artists who portray scenes of whose especial characteristics they are carelessly unobservant. An amusing instance of this sort is remarked in this letter, which appeared in one of our popular periodicals:
+As we have seen, the average citizen is not observant. He rarely could tell the details of an incident he has witnessed, unless he were already familiar with the conditions. Therefore the author of a worthwhile Detective Story must make it his business to familiarize himself perfectly and accurately with the conditions he is describing.
+
+A lack of this familiarity with details is often seen in our best artists who portray scenes of whose especial characteristics they are carelessly unobservant. An amusing instance of this sort is remarked in this letter, which appeared in one of our popular periodicals:
 
 >DEAR SIR:—Your &quot;Ministers&#39; Number&quot; has just come to hand. I assume that some degree of accuracy is desirable even in a cartoon. Most of the clergy at whom your shafts of wit are aimed seem to be of the Episcopal Church, and I guess we can stand it, but what hurts is the vesture in which you attempt to garb us.
 
->For instance, &quot;Charley, the Assistant Minister at St. Joseph&#39;s&quot;—and by the way $1,200 is a large salary for Charley; from his looks I should not say he was worth as much as that, at least he would not be as assistant to me—is dressed in a long old-fashioned surplice with bishop sleeves. Young assistants sometimes have Episcopal bees in their bonnets, but never Episcopal sleeves in their surplices. Again, Charley has around his neck what appears to be a feather boa or a tippet. Twelve hundred dollars would not allow him to sport such luxury. Lastly, Charley, who is apparently meant to be a very high churchman, at least he looks like it, is wearing Geneva bands! What a combination! A long surplice with bishop sleeves, fur collar, and Geneva bands is not to be found in the heavens above or the earth beneath—it might be in the other place, but I have my doubts.
+>For instance, &quot;Charley, the Assistant Minister at St. Joseph&#39;s&quot;—and by the way $1,200 is a large salary for Charley; from his looks I should not say he was worth as much as that, at least he would not be as assistant to me—is dressed in a long old-fashioned surplice with bishop sleeves. Young assistants sometimes have Episcopal bees in their bonnets, but never Episcopal sleeves in their surplices.
+
+>Again, Charley has around his neck what appears to be a feather boa or a tippet. Twelve hundred dollars would not allow him to sport such luxury. Lastly, Charley, who is apparently meant to be a very high churchman, at least he looks like it, is wearing Geneva bands! What a combination! A long surplice with bishop sleeves, fur collar, and Geneva bands is not to be found in the heavens above or the earth beneath—it might be in the other place, but I have my doubts.
 
 >If any of your artists ever went to church for any purpose—incidentally it might benefit them and raise the moral tone of the paper!—they would see what kind of garments a minister does wear, and their fun would have added force and pungency, I think. I am sure LIFE always wants to be correct, even in its humor.
 
@@ -261,7 +290,7 @@ Read Poe; &quot;The Murders in the Rue Morgue&quot; is all evidence. Read Gabori
 
 This subject is well summed up in the following quotation from &quot;The Man in the Corner,&quot; in which the author both entertains and instructs us with his theories.
 
->&quot;But supposing it were of paramount importance that you should give an accurate description of a man who sat next to you for half an hour to-day, how would you proceed?&quot;
+>&quot;But supposing it were of paramount importance that you should give an accurate description of a man who sat next to you for half an hour today, how would you proceed?&quot;
 
 >&quot;I should say that he was of medium height        &quot;
 
@@ -285,7 +314,7 @@ This subject is well summed up in the following quotation from &quot;The Man in 
 
 >&quot;I don&#39;t know—I might—he was certainly not striking enough to be specially remembered.&quot;
 
->&quot;Exactly/1 he said, while he leant forward excitedly, for all the world like a Jack-in-the-box let loose. &quot;Precisely; and you are a journalist call yourself one, at least—and it should be part of your business to notice and describe people. I don&#39;t mean only the wonderful personage with the clear Saxon features, the fine blue eyes, the noble brow and classic face, but the ordinary person—the person who represents ninety out of every hundred of his own kind—the average Englishman, say of the middle classes, who is neither very tall nor very short, who wears a moustache which is neither fair nor dark, but which masks his mouth, and a top hat which hides the shape of his head and brow, a man in fact, who dresses like hundreds of his fellow-creatures, moves like them, speaks like them, has no peculiarity.
+>&quot;Exactly,&quot; he said, while he leant forward excitedly, for all the world like a jack-in-the-box let loose. &quot;Precisely; and you are a journalist call yourself one, at least—and it should be part of your business to notice and describe people. I don&#39;t mean only the wonderful personage with the clear Saxon features, the fine blue eyes, the noble brow and classic face, but the ordinary person—the person who represents ninety out of every hundred of his own kind—the average Englishman, say of the middle classes, who is neither very tall nor very short, who wears a moustache which is neither fair nor dark, but which masks his mouth, and a top hat which hides the shape of his head and brow, a man in fact, who dresses like hundreds of his fellow-creatures, moves like them, speaks like them, has no peculiarity.
 
 >&quot;Try to describe him, to recognize him, say a week hence, among his other eighty-nine doubles; worse still, to swear his life away, if he happened to be implicated in some crime, wherein your recognition of him would place the halter round his neck.
 
@@ -307,9 +336,15 @@ Sherlock Holmes thus remarks upon it:
 
 >&quot;Circumstantial evidence is a very tricky thing,&quot; answered Holmes, thoughtfully. &quot;It may seem to point very straight to one thing, but if you shift your own point of view a little, you may find it pointing in an equally uncompromising manner to something entirely different.&quot;
 
->And seemingly opposed to this, is the opinion of the great detective John W. Murray, who says:
+And seemingly opposed to this, is the opinion of the great detective John W. Murray, who says:
 
->&quot;I believe in circumstantial evidence. I have found it surer than direct evidence in many, many cases. Where circumstantial evidence and direct evidence unite, of course, the result is most satisfactory. There are those who say that circumstances may combine in a false conclusion. This is far less apt to occur than the falsity of direct evidence given by a witness who lies point blank, and who cannot be contradicted save by a judgment of his falsity through the manner of his lying. Few people are good liars. Many of them make their lies too probable; they outdo truth itself. To detect a liar is a great gift. It is a greater gift to detect the lie. I have known instances where, by good fortune, I detected the liar then the lie, and learned the whole truth simply by listening to the lie, and thereby judging the truth. There is no hard and fast rule for this detection. The ability to do it rests with the man. It is largely a matter of instinct.&quot;
+>&quot;I believe in circumstantial evidence. I have found it surer than direct evidence in many, many cases. Where circumstantial evidence and direct evidence unite, of course, the result is most satisfactory.
+
+>There are those who say that circumstances may combine in a false conclusion. This is far less apt to occur than the falsity of direct evidence given by a witness who lies point blank, and who cannot be contradicted save by a judgment of his falsity through the manner of his lying.
+
+>Few people are good liars. Many of them make their lies too probable; they outdo truth itself. To detect a liar is a great gift. It is a greater gift to detect the lie. I have known instances where, by good fortune, I detected the liar then the lie, and learned the whole truth simply by listening to the lie, and thereby judging the truth.
+
+>There is no hard and fast rule for this detection. The ability to do it rests with the man. It is largely a matter of instinct.&quot;
 
 While Mary E. Wilkins in &quot;The Long Arm&quot; voices the same theory with equal cleverness:
 
@@ -319,12 +354,16 @@ Zangwill, too, states these principles clearly:
 
 >&quot;Pray do not consider me impertinent, but have you ever given any attention to the science of evidence?&quot;
 
->&quot;How do you mean?&quot; asked the Home Secretary, rather puzzled, adding with a melancholy smile, &quot;I have had to lately. Of course. I&#39;ve never been a criminal lawyer, like some of my predecessors. But I should hardly speak of it as a science; I look upon it as a question of common- sense.&quot;
+>&quot;How do you mean?&quot; asked the Home Secretary, rather puzzled, adding with a melancholy smile, &quot;I have had to lately. Of course. I&#39;ve never been a criminal lawyer, like some of my predecessors. But I should hardly speak of it as a science; I look upon it as a question of common-sense.&quot;
 
->&quot;Pardon me, sir. It is the most subtle and difficult of all the sciences. It is, indeed, rather the science of the sciences. What is the whole of Inductive logic, as laid down, say, by Bacon and Mill, but an attempt to appraise the value of evidence, the said evidence being the trails left by the Creator, so to speak? The Creator has—I say it in all reverence drawn a myriad red herrings across the track, but the true scientist refuses to be baffled by superficial appearances in detecting the secrets of Nature.
+>&quot;Pardon me, sir. It is the most subtle and difficult of all the sciences. It is, indeed, rather the science of the sciences. What is the whole of Inductive logic, as laid down, say, by Bacon and Mill, but an attempt to appraise the value of evidence, the said evidence being the trails left by the Creator, so to speak?
+
+>The Creator has—I say it in all reverence drawn a myriad red herrings across the track, but the true scientist refuses to be baffled by superficial appearances in detecting the secrets of Nature.
 
 >The vulgar herd catches at the gross apparent fact, but the man of insight knows that what lies on the surface does lie.&quot;
 
 So, realizing the importance of the presentation of evidence as one of the prime factors in our work, let us endeavor to gain a working comprehension of the subject and use it with discrimination and discernment.
+
+<p id="theend">~ The End ~
 
 <h6 class="btt"><a href="#top">Back to Top</a></h6>
