--- a/_posts/2016-08-29-plots.md
+++ b/_posts/2016-08-29-plots.md
@@ -2,11 +2,15 @@
 layout: post_mw
 layoutTag: post
 title: "Plots"
+subtitle:
+chapter: "Chapter 22"
+book: The Techniques of the Mystery
 author: Carolyn Wells
-date: 2016-08-29-16
+pubdate: 1913
+date: 2016-08-29
 category: murderwiki
-excerpt: Chapter 24 of <i>The Techniques of the Mystery</i>, published 1913.
-image:
+excerpt: The reader who is unversed in the arts and crafts of detective fiction cannot be expected to value the skill shown in the great presentations of The Problem and its Solution..
+image: /assets/img/GBurgess-construct.png
 genre: The Techniques of the Mystery
 wordcount: 4162
 ---
@@ -37,7 +41,7 @@ And in his &quot;Talks on Writing English&quot; Arlo Bates observes:
 
 But we have shown earlier in the book that while a detective story, even if poorly written, may interest and amuse, it is not literature unless it shows that superiority of intellectual attainment demanded by the critics or scholars.
 
-**Constructing the Plot**
+## Constructing the Plot
 
 But referring now to the plot, let the young writer be careful that he plans his story with absolute logic and sequence. Poe tells us that it was his &quot;design to render it manifest that no one point in its composition is referable either to accident or intuition; that the work proceeded, step by step, to its completion with the precision and rigid consequence of a mathematical problem.&quot;
 
@@ -49,7 +53,11 @@ In building a story, then, let us construct it entirely from start to finish bef
 
 Here is another valuable point in construction given us by Poe:
 
->&quot;The design of mystery, however, being once determined upon by an author, it becomes imperative, first that no undue or inartistical means be employed to conceal the secret of the plot; and, secondly, that the secret be well kept. Now, when, at page 16, we read that &quot;the body of poor Mr. Rudge, the steward, was found&quot; months after the outrage, etc., we see that Mr. Dickens has been guilty of no misdemeanor against art in stating what was not the fact; since the falsehood is put into the mouth of Solomon Daisy, and given merely as the impression of thus individual and of the public. The writer has not asserted it in his own person, but ingeniously conveyed an idea (false in itself, yet a belief in which is necessary for the effect of the tale) by the mouth of one of his characters. The case is different, however, when Mrs. Rudge is repeatedly denominated &quot;the widow.&quot; It is the author who, himself, frequently so terms her. This is disingenuous and inartistical; accidentally so, of course.&quot;
+>&quot;The design of mystery, however, being once determined upon by an author, it becomes imperative, first that no undue or inartistical means be employed to conceal the secret of the plot; and, secondly, that the secret be well kept. Now, when, at page 16, we read that &quot;the body of poor Mr. Rudge, the steward, was found&quot; months after the outrage, etc., we see that Mr. Dickens has been guilty of no misdemeanor against art in stating what was not the fact; since the falsehood is put into the mouth of Solomon Daisy, and given merely as the impression of thus individual and of the public.
+
+>The writer has not asserted it in his own person, but ingeniously conveyed an idea (false in itself, yet a belief in which is necessary for the effect of the tale) by the mouth of one of his characters.
+
+>The case is different, however, when Mrs. Rudge is repeatedly denominated &quot;the widow.&quot; It is the author who, himself, frequently so terms her. This is disingenuous and inartistical; accidentally so, of course.&quot;
 
 An exactly parallel idea to this may be noticed in &quot;The Leavenworth Case.&quot; Harwell, the private secretary, is a witness at the inquest. Also, he is the murderer. In the very beginning of the book the question is put to him:
 
@@ -59,7 +67,9 @@ We are then told that the young man raised his head with a haughty gesture that 
 
 >&quot;Certainly not; as I am not the man who killed him!&quot;
 
-Now, he was the man who killed him, and had the author told the reader he was not, it would have been infringing on the rights of the reader. But it is perfectly legitimate that the character in the book should make this false statement, by way of not incriminating himself. By this device the reader is not only convinced that this Harwell is innocent, but feels a warming sympathy toward the suspected man. Harwell&#39;s status now being established in the reader&#39;s mind, as that of injured innocence, he is at liberty to figure prominently all through the book, yet never arouse the reader&#39;s sleeping suspicion until the author so wills it.
+Now, he was the man who killed him, and had the author told the reader he was not, it would have been infringing on the rights of the reader. But it is perfectly legitimate that the character in the book should make this false statement, by way of not incriminating himself
+
+By this device the reader is not only convinced that this Harwell is innocent, but feels a warming sympathy toward the suspected man. Harwell&#39;s status now being established in the reader&#39;s mind, as that of injured innocence, he is at liberty to figure prominently all through the book, yet never arouse the reader&#39;s sleeping suspicion until the author so wills it.
 
 This point is a strong one to a conscientious writer of detective fiction—to learn at the end of the volume that the real culprit is the person who has been before you throughout, but whom you never have dreamed of suspecting.
 
@@ -69,7 +79,9 @@ It is this surprise, when at last the identity of the criminal is learned, that 
 
 In &quot;The Whispering Man,&quot; who would guess or even deduce that the clever detective is himself the criminal? Note how deftly he is introduced to the reader, because &quot;he is destined to play a large and most romantic part in the solution of the mystery, and his queer, brilliant, eccentric personality is to appear very often in the ensuing pages.&quot;
 
-But this hint gives the reader no suspicion that the man thus introduced is really the criminal, nor does he suspect it until the very last. This book is rather more subtly constructed than &quot;Hand and Ring,&quot; in that the motive for the crime is shown in the beginning of the book; though so skilfully veiled that even an experienced reader might be excused for not discerning it. The author, Henry Kitchell Webster, calls this his favorite of all the books he has written. He says, and very truly, that &quot;he has played fair with his readers, given them every bit of information-all the clues to the identity of the person who committed the crime—that he himself has, but managing to lead their attention away from the real culprit until the desired moment for climax and revelation has arrived.
+But this hint gives the reader no suspicion that the man thus introduced is really the criminal, nor does he suspect it until the very last. This book is rather more subtly constructed than &quot;Hand and Ring,&quot; in that the motive for the crime is shown in the beginning of the book; though so skilfully veiled that even an experienced reader might be excused for not discerning it.
+
+The author, Henry Kitchell Webster, calls this his favorite of all the books he has written. He says, and very truly, that &quot;he has played fair with his readers, given them every bit of information &mdash; all the clues to the identity of the person who committed the crime &mdash; that he himself has, but managing to lead their attention away from the real culprit until the desired moment for climax and revelation has arrived.
 
 >&quot;In this kind of story when the big smash comes the reader should be able to go back in the story, and having reread all that goes up to the climax be able to unravel each clue which leads to the climax.&quot;
 
@@ -87,7 +99,11 @@ This of course refers especially to books, where more intricacies must be introd
 
 >&quot;First, to play fair with the reader, the cards must all lie on the table. It isn&#39;t honest to keep any up your sleeve; and the problem is to surprise the reader by the unexpected way in which you combine them. The reader must have before him all the facts which the solver of the mystery has, and then the &#39;Solver&#39; must get there first. I also refuse to make any person act suspiciously without cause. If the person is innocent there is no reason why he should behave as though he were guilty.
 
->&quot;I think perhaps my particular trick is to keep the reader in suspense not so much as to what is going to happen as to how it is going to happen. I may add that it also seems necessary to me that every mystery should be approached from at least two angles; say, an amateur detective and a professional one, for instance; and that a great part of the interest of the story lies in the conflict between them, victory leaning first toward one and then toward the other. When I start a story I write it clear through, working regularly every day, (though it takes the lash sometimes) and then going back to do the dovetailing. There must be no loose ends; every joint must fit and there must be no superfluous lumber. A detective story ought to run a swift, straight course from start to finish. It isn&#39;t a leisurely stroll through the country, it&#39;s a hundred yard dash! And you may have noted that in &quot;The Boule Cabinet&quot; there isn&#39;t a hint of love interest; love interest is dead weight unless it is an essential part of the plot; and one can&#39;t carry much dead weight and win a hundred yard dash.&quot;
+>&quot;I think perhaps my particular trick is to keep the reader in suspense not so much as to what is going to happen as to how it is going to happen. I may add that it also seems necessary to me that every mystery should be approached from at least two angles; say, an amateur detective and a professional one, for instance; and that a great part of the interest of the story lies in the conflict between them, victory leaning first toward one and then toward the other.
+
+>When I start a story I write it clear through, working regularly every day, (though it takes the lash sometimes) and then going back to do the dovetailing. There must be no loose ends; every joint must fit and there must be no superfluous lumber.
+
+>A detective story ought to run a swift, straight course from start to finish. It isn&#39;t a leisurely stroll through the country, it&#39;s a hundred yard dash! And you may have noted that in &quot;The Boule Cabinet&quot; there isn&#39;t a hint of love interest; love interest is dead weight unless it is an essential part of the plot; and one can&#39;t carry much dead weight and win a hundred yard dash.&quot;
 
 Mr. Stevenson succinctly expresses the true principles of detective fiction; and by adhering to these, the young writer is travelling in the right path.
 
@@ -103,56 +119,50 @@ So we see that the advisability of romance in detective stories is a matter of o
 
 Henry Kitchell Webster gives perhaps a more definite formula than those above quoted:
 
->BEFORE WRITING: 1. Plan original crime, method, and motive of the murderer. 2. Create, with this as a nucleus, sub-plots relating to several persons who by coincidence are drawn to the place or are connected with the victim, in different ways.
+>**BEFORE WRITING:** 1. Plan original crime, method, and motive of the murderer. 2. Create, with this as a nucleus, sub-plots relating to several persons who by coincidence are drawn to the place or are connected with the victim, in different ways.
 
->THEN WRITE. 1. Introduction. 2. Murder discovery. 3.
-
->Then take up the least likely suspect first, followed by others. 4. Hero Detective enters, decides, arrests and explains.
+>**THEN WRITE:** 1. Introduction. 2. Murder discovery. 3.Then take up the least likely suspect first, followed by others. 4. Hero Detective enters, decides, arrests and explains.
 
 Mr. Gelett Burgess constructs his stories by architectural diagrams. The first story in his book, &quot;The Master of Mysteries,&quot; (published anonymously) is &quot;The Missing John Hudson&quot;—We subjoin its preliminary plan:
 
-**(Murder)
-(A) d)**
-
-**C) d)**
-
-**(Theft)**
-
-**&quot;The Missing John Hudson&quot;**
-
-**a, b, c, d = Clues A, B, C, D = Hypotheses**
+<figure class="image__inpostL">
+  <img id="GBurgess" src="/assets/img/GBurgess-construct.png" alt="" width="100%">
+</figure>
+<br>
 
 Another well-known writer gives this very definite formula:
 
->Preliminaries. Status quo. Introduction of dramatis personae.
+>1. Preliminaries. Status quo. Introduction of dramatis personae.
 
->Birth of Plot. Assembly of actors and assignment of parts.
+>2. Birth of Plot. Assembly of actors and assignment of parts.
 
->Tentative separation of sheep from goats, intentionally misleading.
+>3. Tentative separation of sheep from goats, intentionally misleading.
 
->The Crime,—shot into the story like a bomb.
+>4. The Crime—shot into the story like a bomb.
 
->Gropings for murderer, on part of the police, coroner, friends, relatives and amateur detective.
+>5. Gropings for murderer, on part of the police, coroner, friends, relatives and amateur detective.
 
->Failure of everybody. Call in Transcendent Detective.
+>6. Failure of everybody. Call in Transcendent Detective.
 
->He glances about, announces that the facts are thus and so and proves that the facts are thus and so.
+>7. He glances about, announces that the facts are thus and so and proves that the facts are thus and so.
 
->Discreet removal of the villain by suicide, accident or otherwise.
+>8. Discreet removal of the villain by suicide, accident or otherwise.
 
->Marriage of the girl to the amateur detective. (This is invariable and imperative!)
+>9. Marriage of the girl to the amateur detective. (This is invariable and imperative!)
 
 >The last item is in satiric vein, for among our best writers it is not considered imperative!
 
 All of the foregoing formulae, kindly contributed by their authors, cannot fail to be of use to the beginning writer of Detective Stories. They all agree in the principal points, and are quite in line with Poe&#39;s strict laws.
 
-The rights of the reader must be kept in mind by the author. It is not fair to mislead the reader until he is up against a blank wall. A false clue must lead in an obvious and seemingly logical direction. Then the false clue must be detected, as a natural consequence of the mistaken lead, and the right clues brought into view. It is not fair to make an innocent character appear guilty or vice versa, but it is quite right if the character make himself appear so. A witness who stammers and hesitates, may be guilty or may be innocently embarrassed. That is for the reader to judge.
+The rights of the reader must be kept in mind by the author. It is not fair to mislead the reader until he is up against a blank wall. A false clue must lead in an obvious and seemingly logical direction. Then the false clue must be detected, as a natural consequence of the mistaken lead, and the right clues brought into view.
+
+It is not fair to make an innocent character appear guilty or vice versa, but it is quite right if the character make himself appear so. A witness who stammers and hesitates, may be guilty or may be innocently embarrassed. That is for the reader to judge.
 
 And just in proportion to the cleverness and subtlety of the author&#39;s inventive genius, will the reader be duly and rightfully bewildered, or misled, and the game be well played.
 
 Prof. Max Dessoir, in a very fine article on &quot;The Psychology of Conjuring,&quot; writes as follows:
 
->&quot;By awakening interest in some unimportant detail, the conjurer concentrates that attention on some false point, or negatively, diverts it from the main object, and we all know the senses of an inattentive person are pretty dull... When causing the disappearance of some object, the conjurer counts one, two, three, because, the attention of the public being diverted to three, they do not notice what happens at one and two... A specially successful method of diversion is founded on the human craze for imitation... The conjurer counts on this in many cases. He always looks in the direction where he wants the attention of the public, and does everything himself which he wants the public to do... If the trick is in the left hand, the conjurer turns sharply to the person to the right, presuming correctly that the spectators will make the same movement, and will not notice what is going on in the left hand... Every sharp, short remark will, for a moment, at least, divert the eyes from the hands and direct them to the mouth, according to the above-mentioned law of imitation.&quot;
+>&quot;By awakening interest in some unimportant detail, the conjurer concentrates that attention on some false point, or negatively, diverts it from the main object, and we all know the senses of an inattentive person are pretty dull &hellip; When causing the disappearance of some object, the conjurer counts one, two, three, because, the attention of the public being diverted to three, they do not notice what happens at one and two &hellip; A specially successful method of diversion is founded on the human craze for imitation &hellip; The conjurer counts on this in many cases. He always looks in the direction where he wants the attention of the public, and does everything himself which he wants the public to do &hellip; If the trick is in the left hand, the conjurer turns sharply to the person to the right, presuming correctly that the spectators will make the same movement, and will not notice what is going on in the left hand &hellip; Every sharp, short remark will, for a moment, at least, divert the eyes from the hands and direct them to the mouth, according to the above-mentioned law of imitation.&quot;
 
 These most valuable directions may be helpfully adapted to the writing of Detective Stories. The author is, in a way, a conjuror, with an avowed intent to hoodwink his audience.
 
@@ -166,7 +176,11 @@ If romance is out of place in a detective story, humor is even more so. With the
 
 Mr. Zangwill wrote only one Detective Story, but that one is unique; and in plot far and away cleverer than any tale of a Transcendent Detective. Though professing to care little for this Detective Story of his, he says in the preface to its second edition:
 
->&quot;&#39;Big Bow Mystery1 seems to me an excellent murder story, as murder stories go, for, while as sensational as the most of them, it contains more humor and character creation than the best. Indeed, the humor is too abundant. Mysteries should be sedate and sober. There should be a pervasive atmosphere of horror and awe such as Poe manages to create. Humor is out of tone; it would be more artistic to preserve a somber note throughout. But I was a realist in those days, and in real life mysteries occur to real persons with their individual humors, and mysterious circumstances are apt to be complicated by comic.&quot;
+>&quot;&#39;Big Bow Mystery&#39; seems to me an excellent murder story, as murder stories go, for, while as sensational as the most of them, it contains more humor and character creation than the best.
+
+>Indeed, the humor is too abundant. Mysteries should be sedate and sober. There should be a pervasive atmosphere of horror and awe such as Poe manages to create. Humor is out of tone; it would be more artistic to preserve a somber note throughout.
+
+>But I was a realist in those days, and in real life mysteries occur to real persons with their individual humors, and mysterious circumstances are apt to be complicated by comic.&quot;
 
 <h6 class="btt"><a href="#top">Back to Top</a></h6>
 
@@ -182,11 +196,13 @@ In a word, then, marshal your characters tentatively and select the one seemingl
 
 Nothing is more annoying to the trained reader than a long chapter of explanation after the revelation. We have sometimes more than one chapter of the dead criminal&#39;s written confession, and our wonder and curiosity also being dead, we take little interest in the perusal.
 
-Unless this post-mortem confession is inevitable to your plot, so arrange it that the motives and methods are explained just before the climax instead of just after, Conan Doyle beautifully escaped this situation in &quot;A Study in Scarlet/&#39; by reserving Sherlock Holmes&#39; explanation of his own work until after the long and wearisome interpolation revealing the motive of the crime. The reader waded through, or skimmed through those chapters, because spurred on by his desire to learn the re-solution of the problem, to which he knew the answer.
+Unless this post-mortem confession is inevitable to your plot, so arrange it that the motives and methods are explained just before the climax instead of just after, Conan Doyle beautifully escaped this situation in &quot;A Study in Scarlet&quot; by reserving Sherlock Holmes&#39; explanation of his own work until after the long and wearisome interpolation revealing the motive of the crime. The reader waded through, or skimmed through those chapters, because spurred on by his desire to learn the resolution of the problem, to which he knew the answer.
 
 But Conan Doyle is not at his best in mystery novels. The short-story is his forte. In &quot;The Hound of the Baskervilles&quot; the author realizes often that the action must be retarded, and Sherlock Holmes for once in his life is obliged to bungle. About a third of the way through the book. Holmes indulges in a shrug and a rueful smile. &quot;Snap goes our third thread, and we end where we began,&quot; said he.
 
-Never in a short-story would he have made his third thread snap, nor would he, indeed, have had any third thread; the first would have led to the desired goal. But in a book, threads must be multiplied and snapped and tangled to make the larger web. In &quot;The Hound of the Baskervilles&quot; we are treated to descriptions of scenery. We learn that &quot;Rolling pasture lands curved upwards on either side of us, and old gabled houses peeped out from amid the thick green foliage, but behind the peaceful and sunlit country-side there rose, ever dark against the evening sky, the long, gloomy curve of the moor, broken by the jagged and sinister hills.&quot; In a short-story these things would have been left to the imagination, for lack of room.
+Never in a short-story would he have made his third thread snap, nor would he, indeed, have had any third thread; the first would have led to the desired goal. But in a book, threads must be multiplied and snapped and tangled to make the larger web.
+
+In &quot;The Hound of the Baskervilles&quot; we are treated to descriptions of scenery. We learn that &quot;Rolling pasture lands curved upwards on either side of us, and old gabled houses peeped out from amid the thick green foliage, but behind the peaceful and sunlit country-side there rose, ever dark against the evening sky, the long, gloomy curve of the moor, broken by the jagged and sinister hills.&quot; In a short-story these things would have been left to the imagination, for lack of room.
 
 A further consideration is that, in the book, unnecessary though acceptable characters had to be introduced, such as Selden and his wife&#39;s brother. A love interest is introduced around the beautiful Miss Stapleton. The device of Watson&#39;s diary report is introduced to delay the decisions of Sherlock Holmes. And the mysterious &quot;L.L.&quot; is invented for the same reason. But so accustomed is Conan Doyle to the quick action of a short-story that these forced delays hamper him.
 
@@ -200,12 +216,18 @@ As is characteristic of Conan Doyle, the denouement of this story entirely satis
 
 It is always unpleasant to contemplate the hanging or the electrocuting of the fiction criminal. For this reason he not infrequently takes poison (which he has ready in his pocket), as soon as he is discovered, and dies peacefully, close upon the last words of his confession. This is one of the conventions adopted to spare the reader&#39;s feelings. For a criminal that can hold the reader&#39;s interest throughout the story is often too attractive a character to be permitted a horrible taking off.
 
-But these conventions and devices and unwritten laws of the technique of the Mystery Story can only be learned—or, at least, can best be learned—from the thoughtful reading of the works of the masters in this field. The beauty and value of these creations cannot be appreciated by the casual or untrained reader. Only a connoisseur in the art of detective fiction can appreciate and intelligently enjoy the skill with which a great author plays with his readers. It may be likened to the skilled fisherman playing with trout. Or perhaps it is better symbolized by these remarks of the Great Herrman when speaking of his handcuff tricks:
+But these conventions and devices and unwritten laws of the technique of the Mystery Story can only be learned—or, at least, can best be learned—from the thoughtful reading of the works of the masters in this field.
+
+The beauty and value of these creations cannot be appreciated by the casual or untrained reader. Only a connoisseur in the art of detective fiction can appreciate and intelligently enjoy the skill with which a great author plays with his readers.
+
+It may be likened to the skilled fisherman playing with trout. Or perhaps it is better symbolized by these remarks of the Great Herrman when speaking of his handcuff tricks:
 
 >&quot;Common sense alone does not entitle a person to judge competently of the safety of fetters; only the man who is familiar with the technique of knots and the different ways of tying can express an opinion. To decide whether a closure is right or not, requires technical knowledge.
 
 >Most people imagine that they can go unprepared to a spiritualistic seance, and pass a correct opinion on the existence or nonexistence of prestidigitation. This standpoint is as childish as when a layman expresses himself on the genuineness of the seal of the middle ages or on the nature of a nervous affection.&quot;
 
 And so, the reader who is unversed in the arts and crafts of detective fiction cannot be expected to value the skill shown in the great presentations of The Problem and its Solution.
+
+<p id="theend">~ The End ~
 
 <h6 class="btt"><a href="#top">Back to Top</a></h6>
